--- a/GADUDA_ver01/src/main/webapp/resources/Css/Commons/gaduda_commons.css
+++ b/GADUDA_ver01/src/main/webapp/resources/Css/Commons/gaduda_commons.css
@@ -936,7 +936,8 @@ a {
 }
 
 .w3-container, .w3-panel {
-	padding: 0.01em 16px
+	width: 90%;
+	margin: auto
 }
 
 .w3-panel {
@@ -1325,9 +1326,19 @@ to {
 	box-shadow: none !important
 }
 /* Colors */
-.w3-basiccolor, .w3-hover-amber:hover {
+.w3-basiccolor, .w3-hover-basiccolor:hover {
 	color: #000 !important;
-	background-color: #ffa64d !important
+	background-color: #fffffe !important
+}
+
+.w3-pointcolor, .w3-hover-pointcolor:hover {
+	color: #000 !important;
+	background-color: #87ebff !important
+}
+
+.w3-subcolor, .w3-hover-subcolor:hover {
+	color: #FFF !important;
+	background-color: #84bae8 !important
 }
 
 .w3-amber, .w3-hover-amber:hover {
