--- a/GADUDA_ver01/src/main/webapp/resources/Css/Commons/gaduda_commons.css
+++ b/GADUDA_ver01/src/main/webapp/resources/Css/Commons/gaduda_commons.css
@@ -223,9 +223,9 @@ h6 {
 }
 
 h1, h2, h3, h4, h5, h6 {
-	font-family: "Segoe UI", Arial, sans-serif;
-	font-weight: 400;
-	margin: 10px 0
+	font-family: 'Noto Sans KR'
+	font-weight: normal;
+	font-style: normal
 }
 
 .w3-wide {
@@ -257,6 +257,11 @@ a {
 	width: 100%;
 	display: table
 }
+
+.detailView {
+	max-width: 1200px; margin-top: 200px; margin-left: 300px
+}
+
 
 .w3-table-all {
 	border: 1px solid #ccc
@@ -940,6 +945,16 @@ a {
 	margin: auto
 }
 
+.joinSection {
+	margin-top: 600px !important;
+}
+
+.mainSection {
+	margin-top: 150px !important;
+	max-width: 1200px !important;
+}
+
+
 .w3-panel {
 	margin-top: 16px;
 	margin-bottom: 16px
@@ -1252,9 +1267,14 @@ to {
 	margin: 16px !important
 }
 
+.w3-margin-2 {
+	margin: 2px !important
+}
+
 .w3-margin-top {
 	margin-top: 16px !important
 }
+
 
 .w3-margin-bottom {
 	margin-bottom: 16px !important
