--- a/GADUDA_ver01/src/main/webapp/resources/Css/Commons/gaduda_commons.css
+++ b/GADUDA_ver01/src/main/webapp/resources/Css/Commons/gaduda_commons.css
@@ -1609,7 +1609,7 @@ to {
 }
 
 .w3-text-teal {
-	color: #009688 !important
+	color: #84bae8 !important
 }
 
 .w3-text-light-grey, .w3-hover-text-light-grey:hover,
